# coreutils

./: .gitignore  Cargo.toml  Cross.toml  README.md  TODO.md  build.rs  rust-toolchain
.cargo/: config.toml
macros/: Cargo.toml
macros/src/: lib.rs
src/: commands.rs  error.rs  lib.rs  main.rs  util.rs
src/commands/: arch.rs  b2sum.rs  base32.rs  base64.rs  basename.rs  basenc.rs  cat.rs  chcon.rs  chgrp.rs  chmod.rs  chown.rs  chroot.rs  cksum.rs  comm.rs  cp.rs  csplit.rs  cut.rs  date.rs  dd.rs  df.rs  dir.rs  dircolors.rs  dirname.rs  du.rs  echo.rs  env.rs  expand.rs  expr.rs  factor.rs  false.rs  fmt.rs  fold.rs  groups.rs  head.rs  hostid.rs  hostname.rs  id.rs  install.rs  join.rs  kill.rs  (+68 more)
src/utils/: mod.rs  passwd.rs
