[package]
name = "coreutils"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
description = "GNU's coreutils rewritten in rust"
repository = "https://github.com/morr0ne/coreutils"
readme = "README.md"
publish = false

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bloat]
inherits = "release"
strip = false

[dependencies]
blake2 = { version = "0.10.6", optional = true }
hex = { version = "0.4.3", optional = true }
data-encoding = { version = "2.3.3", optional = true }
rustix = { version = "0.38.8", optional = true, default-features = false, features = [
    "process",
    "system",
] }
lexopt = "0.3.0"
lexopt_derive = "0.0.1-alpha"

[features]
arch = ["dep:rustix"]
b2sum = ["dep:blake2", "dep:hex"]
base32 = ["dep:data-encoding"]
base64 = ["dep:data-encoding"]
basename = []
basenc = ["dep:data-encoding"]
cat = []
chcon = []
chgrp = []
chmod = []
chown = []
chroot = []
cksum = []
comm = []
cp = []
csplit = []
cut = []
date = []
dd = []
df = []
dir = []
dircolors = []
dirname = []
du = []
echo = []
env = []
expand = []
expr = []
factor = []
false = []
fmt = []
fold = []
groups = []
head = []
hostid = []
hostname = []
id = []
install = []
join = []
kill = []
link = []
ln = []
logname = []
ls = []
md5sum = []
mkdir = []
mkfifo = []
mknod = []
mktemp = []
mv = []
nice = []
nl = []
nohup = []
nproc = []
numfmt = []
od = []
paste = []
pathchk = []
pinky = []
pr = []
printenv = []
printf = []
ptx = []
pwd = []
readlink = []
realpath = []
rm = []
rmdir = []
runcon = []
seq = []
sha1sum = []
sha224sum = []
sha256sum = []
sha384sum = []
sha512sum = []
shred = []
shuf = []
sleep = []
sort = []
split = []
stat = []
stdbuf = []
stty = []
sum = []
sync = []
tac = []
tail = []
tee = []
test = []
timeout = []
touch = []
tr = []
true = []
truncate = []
tsort = []
tty = ["dep:rustix"]
uname = []
unexpand = []
uniq = []
unlink = []
uptime = []
users = []
vdir = []
wc = []
who = []
whoami = ["dep:rustix"]
yes = ["dep:rustix"]
