[package]
name = "coreutils"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
description = "GNU's coreutils rewritten in rust"
repository = "https://github.com/morr0ne/coreutils"
readme = "README.md"
publish = false

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bloat]
inherits = "release"
strip = false

[dependencies]
blake2 = "0.10.6"
hex = "0.4.3"
data-encoding = "2.3.3"
rustix = { version = "0.38.19", default-features = false, features = [
    "process",
    "procfs",
    "std",
    "stdio",
    "system",
    "termios",
] }
lexopt = "0.3.0"
lexopt_derive = "0.0.1-alpha"
