[package]
name = "coreutils"
version = "0.0.1"
edition = "2024"
license = "GPL-3.0"
authors = ["Matilde Morrone <contact@morrone.dev>"]
description = "GNU's coreutils rewritten in rust"
repository = "https://github.com/morr0ne/coreutils"
readme = "README.md"
publish = false

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.bloat]
inherits = "release"
strip = false

[dependencies]
blake2 = "0.10.6"
hex = "0.4.3"
data-encoding = "2.8.0"
rustix = { version = "1.0.2", default-features = false, features = [
    "process",
    "std",
    "stdio",
    "system",
    "termios",
    "fs",
] }
lexopt = "0.3.0"
lexopt_derive = "0.0.1-alpha"
