[package]
name = "coreutils_macros"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
description = "GNU's coreutils rewritten in rust"
repository = "https://github.com/morr0ne/coreutils"
readme = "../README.md"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.51"
quote = "1.0.23"
syn = "1.0.107"
